<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Groups Organizer</string>
    <string name="registerEditTextName">Enter Name</string>
    <string name="registerEditTextAge">Enter Age</string>
    <string name="registerEditTextUsrLog">User login</string>
    <string name="registerEditTextUser">User</string>
    <string name="registerEditTextMail">E-mail</string>
    <string name="registerEditTextReMail">Confirm E-mail</string>
    <string name="registerEditTextPass">Password</string>
    <string name="registerEditTextRePass">Confirm Password</string>
    <string name="registerButtonNameCUsr">Create User</string>
    <string name="registerTextView2Label">User Information</string>
    <string name="registerTextViewLabelUs">Account Information</string>
    <string name="registerNameVerification">Username should be 5&#8211;60 characters long</string>
    <string name="registerUserVerification">Username should be 5&#8211;30 characters long</string>
    <string name="registerAgeVerification">Age is not valid</string>
    <string name="registerPassVerification">Password should be at least 5 characters long</string>
    <string name="registerEmailVerification">Must be a valid email</string>
    <string name="eventconfigtextView">Event Configuration</string>
    <string name="groupconfigtextView">Group Configuration</string>
    <string name="event_configEventName">Event Name</string>
    <string name="group_configEventName">Group Name</string>
    <string name="event_configDescription">Description</string>
    <string name="event_configWhen">When?</string>
    <string name="event_configWhere">Where?</string>
    <string name="event_configAddPeople">Add People</string>
    <string name="addPeopleTitle">Add people or groups</string>
    <string name="groups">Groups</string>
    <string name="people">People</string>
    <string name="loginFailed">Usuario y/o contraseña no válidos</string>
    <string name="loginSuccessfull">Cargando datos de sesión</string>


    <string-array name="gender">
        <item/>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>