<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              tools:context=".ui.AddPeople">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addPeopleTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroupType"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupType"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:id="@+id/radioPeople"
            android:checked="true"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/groups"
            android:id="@+id/radioGroups"
            android:checked="false"
            android:layout_weight="1"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <MultiAutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/multiAutoCompleteSearch"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:hint="Claudio Jorquera or futbol team"
            android:layout_weight="0.2"/>

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/buttonSearch"
            android:src="@android:drawable/ic_menu_search"
            android:layout_alignTop="@+id/multiAutoCompleteSearch"
            android:layout_toRightOf="@+id/multiAutoCompleteSearch"
            android:onClick="onSearch"
            android:layout_weight="0.8"/>
    </LinearLayout>

</RelativeLayout>